<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#ffffff"
        android:id="@+id/rootlayout_id"
        tools:context="com.blueeyelab.cgpa.cgpacalculator.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
    >
        <TextView
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/header"
                android:textSize="20sp"
                android:textColor="#2fbc36"
                android:textStyle="bold"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2"
    >
        <EditText
                android:id="@+id/credit_id"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_1"
                android:background="@drawable/edittext_back"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginRight="4dp"
                android:textColorHint="#ffffff"
                android:inputType="numberDecimal"
                android:textColor="#ffffff"
        />
        <EditText
                android:id="@+id/gpa_id"
                android:layout_marginLeft="4dp"
                android:padding="2dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_2"
                android:background="@drawable/edittext_back"
                android:gravity="center"
                android:textColorHint="#ffffff"
                android:inputType="numberDecimal"
                android:textColor="#ffffff"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="3"
            android:layout_marginTop="2dp"
    >
        <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#00c853"
                android:textSize="25sp"
        />
        <TextView
                android:id="@+id/total_id"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_2"
                android:textStyle="bold"
                android:textColor="#00c853"
                android:textSize="25sp"
                android:gravity="center_vertical"
        />
        <Button
                android:id="@+id/add_id"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_text"
                android:gravity="center"
                android:background="@drawable/button_back"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20sp"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
    >
        <Button
                android:id="@+id/refresh_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Refresh"
                android:background="@drawable/refresh_bg"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textAllCaps="false"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="4"
            android:background="@drawable/mid_layout"
    >
        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Credit"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#f44336"
                android:textSize="20sp"
        />
        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="GPA"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#f44336"
                android:textSize="20sp"
        />
        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Grade"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#f44336"
                android:textSize="20sp"
        />
        <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Remarks"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#f44336"
                android:textSize="20sp"
        />
    </LinearLayout>

    <ListView
            android:background="#ffffff"
            android:id="@+id/listview_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:divider="#e0f7fa"
            android:dividerHeight="2dp"
    >

    </ListView>

</LinearLayout>
